AX6UIPicker 준비중

--- a/samples/src/sample.ejs
+++ b/samples/src/sample.ejs
@@ -69,7 +69,7 @@
                 inDuration: 300,
                 outDuration: 225,
                 constrainWidth: true, // Does not change width of dropdown to that of the activator
-                hover: true, // Activate on hover
+                hover: false, // Activate on hover
                 gutter: 0, // Spacing from edge
                 belowOrigin: true, // Displays dropdown below the button
                 alignment: 'left', // Displays dropdown with edge aligned to the left of button
