AX6UIPalette, AX6UIPicker

--- a/src/AX6UIPicker/_ax-picker.scss
+++ b/src/AX6UIPicker/_ax-picker.scss
@@ -39,7 +39,7 @@
 		padding: $ax6picker-body-padding;
 		text-align: center;
 		.ax-picker-content {
-			min-width: 50;
+			min-width: 50px;
 
 			.ax-picker-content-box {
 				border: $ax6picker-content-border;
