--- a/samples/src/sample.ejs
+++ b/samples/src/sample.ejs
@@ -40,7 +40,7 @@
                 <ul class="right hide-on-med-and-down">
 
                     <!-- Dropdown Trigger -->
-                    <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+                    <li><a class="dropdown-button" href="#!" data-activates="dropdown1">샘플목록<i class="material-icons right">arrow_drop_down</i></a></li>
 
                 </ul>
             </div>
