--- a/samples/src/custom-materialize.scss
+++ b/samples/src/custom-materialize.scss
@@ -3,3 +3,40 @@
     line-height: 2em;
     padding: 0 0.8em;
 }
+
+// Media Query Ranges
+$small-screen-up: 601px !default;
+$medium-screen-up: 993px !default;
+$large-screen-up: 1201px !default;
+$small-screen: 600px !default;
+$medium-screen: 992px !default;
+$large-screen: 1200px !default;
+
+$medium-and-up: "only screen and (min-width : #{$small-screen-up})" !default;
+$large-and-up: "only screen and (min-width : #{$medium-screen-up})" !default;
+$extra-large-and-up: "only screen and (min-width : #{$large-screen-up})" !default;
+$small-and-down: "only screen and (max-width : #{$small-screen})" !default;
+$medium-and-down: "only screen and (max-width : #{$medium-screen})" !default;
+$medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width : #{$medium-screen})" !default;
+
+nav{
+    background: #000;
+    .nav-wrapper{
+
+        .container {
+            margin: 0 auto;
+            max-width: 1280px;
+            width: 100%;
+        }
+        @media #{$medium-and-up} {
+            .container {
+                width: 85%;
+            }
+        }
+        @media #{$large-and-up} {
+            .container {
+                width: 70%;
+            }
+        }
+    }
+}
