--- a/samples/src/sample.ejs
+++ b/samples/src/sample.ejs
@@ -31,20 +31,20 @@
     </ul>
 
     <nav>
+        <div class="nav-wrapper">
+            <div class="container">
+            <ul class="left hide-on-large-only" data-nav-account="">
+                <li><a href="#" data-activates="slide-out" class="waves-effect waves-light"><i class="large material-icons">menu</i></a></li>
+            </ul>
+            <a href="#!" class="brand-logo" style="padding:0 20px;">AX6UI</a>
+            <ul class="right hide-on-med-and-down">
 
-            <div class="nav-wrapper">
-                <ul class="left hide-on-large-only" data-nav-account="">
-                    <li><a href="#" data-activates="slide-out" class="waves-effect waves-light"><i class="large material-icons">menu</i></a></li>
-                </ul>
-                <a href="#!" class="brand-logo" style="padding:0 20px;">AX6UI</a>
-                <ul class="right hide-on-med-and-down">
+                <!-- Dropdown Trigger -->
+                <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Samples<i class="material-icons right">arrow_drop_down</i></a></li>
 
-                    <!-- Dropdown Trigger -->
-                    <li><a class="dropdown-button" href="#!" data-activates="dropdown1">샘플목록<i class="material-icons right">arrow_drop_down</i></a></li>
-
-                </ul>
+            </ul>
             </div>
-
+        </div>
     </nav>
 
     <div class="container" style="padding-top: 1em;">
