--- a/samples/src/assets/sample.ejs
+++ b/samples/src/assets/sample.ejs
@@ -6,77 +6,51 @@
         <% if (htmlWebpackPlugin.files.favicon) { %>
         <link rel="shortcut icon" href="<%= htmlWebpackPlugin.files.favicon%>" />
         <% } %>
-        <% if (htmlWebpackPlugin.options.mobile) { %>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+        <% for (key in htmlWebpackPlugin.options.commonChunks) { %>
+        <script src="<%= htmlWebpackPlugin.options.commonChunks[key] %>" type="text/javascript"></script>
         <% } %>
-
-        <% for (var css in htmlWebpackPlugin.files.css) { %>
-        <link href="<%= htmlWebpackPlugin.files.css[css] %>" rel="stylesheet" />
-        <% } %>
-
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css"/>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-
-    <!-- Compiled and minified JavaScript -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
     </head>
     <body>
 
-    <ul id="dropdown1" class="dropdown-content">
-        <% for (key in htmlWebpackPlugin.options.menu) { %>
-        <li><a href="<%= htmlWebpackPlugin.options.menu[key] %>"><%= htmlWebpackPlugin.options.menu[key] %></a></li>
-        <% } %>
-    </ul>
+        <ul id="dropdown1" class="dropdown-content">
+            <% for (key in htmlWebpackPlugin.options.menu) { %>
+            <li><a href="<%= htmlWebpackPlugin.options.menu[key] %>"><%= htmlWebpackPlugin.options.menu[key] %></a></li>
+            <% } %>
+        </ul>
 
-    <nav>
-        <div class="nav-wrapper">
-            <div class="container">
-            <ul class="left hide-on-large-only" data-nav-account="">
-                <li><a href="#" data-activates="slide-out" class="waves-effect waves-light"><i class="large material-icons">menu</i></a></li>
-            </ul>
-            <a href="#!" class="brand-logo" style="padding:0 20px;">AX6UI</a>
-            <ul class="right hide-on-med-and-down">
+        <nav>
+            <div class="nav-wrapper">
+                <div class="container">
+                <ul class="left hide-on-large-only" data-nav-account="">
+                    <li><a href="#" data-activates="slide-out" class="waves-effect waves-light"><i class="large material-icons">menu</i></a></li>
+                </ul>
+                <a href="#!" class="brand-logo" style="padding:0 20px;">AX6UI</a>
+                <ul class="right hide-on-med-and-down">
 
-                <!-- Dropdown Trigger -->
-                <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Samples<i class="material-icons right">arrow_drop_down</i></a></li>
+                    <!-- Dropdown Trigger -->
+                    <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Samples<i class="material-icons right">arrow_drop_down</i></a></li>
 
-            </ul>
+                </ul>
+                </div>
             </div>
+        </nav>
+
+        <div class="container" style="padding-top: 1em;">
+            <div id="sample-body"></div>
         </div>
-    </nav>
-
-    <div class="container" style="padding-top: 1em;">
-        <div id="sample-body"></div>
-    </div>
 
 
-    <ul id="slide-out" class="side-nav">
-        <% for (key in htmlWebpackPlugin.options.menu) { %>
-        <li><a href="<%= htmlWebpackPlugin.options.menu[key] %>"><%= htmlWebpackPlugin.options.menu[key] %></a></li>
+        <ul id="slide-out" class="side-nav">
+            <% for (key in htmlWebpackPlugin.options.menu) { %>
+            <li><a href="<%= htmlWebpackPlugin.options.menu[key] %>"><%= htmlWebpackPlugin.options.menu[key] %></a></li>
+            <% } %>
+        </ul>
+
+
+        <% for (key in htmlWebpackPlugin.files.chunks) { %>
+        <script src="<%= htmlWebpackPlugin.files.chunks[key].entry %>" type="text/javascript"></script>
         <% } %>
-    </ul>
-
-    <% for (key in htmlWebpackPlugin.files.chunks) { %>
-    <script src="<%= htmlWebpackPlugin.files.chunks[key].entry %>" type="text/javascript"></script>
-    <% } %>
-
-    <script>
-        $(document).ready(function () {
-            $('[data-activates="slide-out"]').sideNav();
-            $(".dropdown-button").dropdown({
-                inDuration: 300,
-                outDuration: 225,
-                constrainWidth: true, // Does not change width of dropdown to that of the activator
-                hover: false, // Activate on hover
-                gutter: 0, // Spacing from edge
-                belowOrigin: true, // Displays dropdown below the button
-                alignment: 'left', // Displays dropdown with edge aligned to the left of button
-                stopPropagation: true // Stops event propagation
-            });
-        })
-    </script>
-
     </body>
 </html>
