--- a/src/AX6UIAutocomplete/_variables.scss
+++ b/src/AX6UIAutocomplete/_variables.scss
@@ -3,6 +3,7 @@ $ax6autocomplete-label-padding: 0px 7px !default;
 $ax6autocomplete-label-bg-colors: (#eee, #eee) !default;
 $ax6autocomplete-label-border: 1px solid #ccc !default;
 $ax6autocomplete-label-color: #444 !default;
+$ax6autocomplete-label-hover-color: #e97259 !default;
 
 $ax6autocomplete-addon-icon-height: 4.5px !default;
 $ax6autocomplete-addon-icon-padding-right: 7px !default;
