--- a/src/AX6UIAutocomplete/_variables.scss
+++ b/src/AX6UIAutocomplete/_variables.scss
@@ -1,6 +1,6 @@
 $ax6autocomplete-label-padding: 0px 7px !default;
 
-$ax6autocomplete-label-bg-colors: (#eee, #eee) !default;
+$ax6autocomplete-label-bg-colors: (#fff, #fff) !default;
 $ax6autocomplete-label-border: 1px solid #ccc !default;
 $ax6autocomplete-label-color: #444 !default;
 $ax6autocomplete-label-hover-color: #e97259 !default;
