--- a/src/AX6UIAutocomplete/_variables.scss
+++ b/src/AX6UIAutocomplete/_variables.scss
@@ -35,6 +35,6 @@ $ax6autocomplete-option-item-padding-xs: 1px 0px !default;
 $ax6autocomplete-option-item-font-size-xs: $ax6autocomplete-option-item-font-size * 0.8 !default;
 
 ///~~ theme
-$ax6autocomplete-default-base-color: #ccc !default;
+$ax6autocomplete-default-base-color: #444 !default;
 $ax6autocomplete-default-theme-color: #ccc !default;
 $ax6autocomplete-default-hover-type: darken, 20% !default;
