--- a/src/AX6UIAutocomplete/_variables.scss
+++ b/src/AX6UIAutocomplete/_variables.scss
@@ -2,6 +2,7 @@ $ax6autocomplete-label-padding: 0px 5px !default;
 
 $ax6autocomplete-label-bg-colors: (#fff, #fff) !default;
 $ax6autocomplete-label-border: 1px solid #ccc !default;
+$ax6autocomplete-label-border-radius: 4px !default;
 $ax6autocomplete-label-color: #444 !default;
 $ax6autocomplete-label-hover-color: #e97259 !default;
 
