--- a/src/AX6UITooltip/_ax-tooltip.scss
+++ b/src/AX6UITooltip/_ax-tooltip.scss
@@ -13,46 +13,90 @@
   @if $direction == top {
     &:hover {
       &:before {
-        bottom: -5px;
-        right: 50%;
-        border: $ax6ui-tooltip-arrow-size solid transparent;
-        border-bottom-color: $ax6ui-tooltip-bg-color;
-        @include transform(translateX(50%));
-      }
-      &:after {
-        right: 50%;
-        top: 100%;
+        top: - $ax6ui-tooltip-arrow-size;
         bottom: auto;
-        @include transform(translateX(50%));
-        margin-top: $ax6ui-tooltip-arrow-size;
-        margin-bottom: 0;
-      }
-    }
-  }
-  @if $direction == bottom {
-    &:hover {
-      &:before {
-        top: -5px;
+        left: auto;
         right: 50%;
         border: $ax6ui-tooltip-arrow-size solid transparent;
         border-top-color: $ax6ui-tooltip-bg-color;
         @include transform(translateX(50%));
       }
       &:after {
-        right: 50%;
         top: auto;
         bottom: 100%;
+        left: auto;
+        right: 50%;
         @include transform(translateX(50%));
-        margin-top: 0;
+        margin: 0;
         margin-bottom: $ax6ui-tooltip-arrow-size;
       }
     }
   }
+  @if $direction == bottom {
+    &:hover {
+      &:before {
+        top: auto;
+        bottom: - $ax6ui-tooltip-arrow-size;
+        left: auto;
+        right: 50%;
+        border: $ax6ui-tooltip-arrow-size solid transparent;
+        border-bottom-color: $ax6ui-tooltip-bg-color;
+        @include transform(translateX(50%));
+      }
+      &:after {
+        top: 100%;
+        bottom: auto;
+        left: auto;
+        right: 50%;
+        @include transform(translateX(50%));
+        margin: 0;
+        margin-top: $ax6ui-tooltip-arrow-size;
+      }
+    }
+  }
   @if $direction == left {
-
+    &:hover {
+      &:before {
+        top: 50%;
+        bottom: auto;
+        left: - $ax6ui-tooltip-arrow-size;
+        right: auto;
+        border: $ax6ui-tooltip-arrow-size solid transparent;
+        border-left-color: $ax6ui-tooltip-bg-color;
+        @include transform(translateX(0) translateY(-50%));
+      }
+      &:after {
+        top: 50%;
+        bottom: auto;
+        left: auto;
+        right: 100%;
+        @include transform(translateY(-50%));
+        margin: 0;
+        margin-right: $ax6ui-tooltip-arrow-size;
+      }
+    }
   }
   @if $direction == right {
-
+    &:hover {
+      &:before {
+        top: 50%;
+        bottom: auto;
+        left: auto;
+        right: - $ax6ui-tooltip-arrow-size;
+        border: $ax6ui-tooltip-arrow-size solid transparent;
+        border-right-color: $ax6ui-tooltip-bg-color;
+        @include transform(translateX(0) translateY(-50%));
+      }
+      &:after {
+        top: 50%;
+        bottom: auto;
+        left: 100%;
+        right: auto;
+        @include transform(translateY(-50%));
+        margin: 0;
+        margin-left: $ax6ui-tooltip-arrow-size;
+      }
+    }
   }
 }
 
@@ -96,7 +140,7 @@
     }
   }
 
-  @include tooltip-direction(top);
+  @include tooltip-direction(bottom);
 
   &.tooltip-bottom {
     @include tooltip-direction(bottom);
