AX6UIDocker 처리중

--- a/src/AX6UIDocker/_variables.scss
+++ b/src/AX6UIDocker/_variables.scss
@@ -1,5 +1,5 @@
 //========= ax5docker
-$ax6ui-docker-bg: $panel-bg !default;
+$ax6ui-docker-bg: #fff !default;
 $ax6ui-docker-border-color: #C9C9C9 !default;
 $ax6ui-docker-tab-bg: #ECECEC !default;
 $ax6ui-docker-tab-item-bg: #D4D4D4 !default;
