--- a/samples/src/assets/sample.ejs
+++ b/samples/src/assets/sample.ejs
@@ -12,6 +12,10 @@
         <% for (key in htmlWebpackPlugin.options.commonChunks) { %>
         <script src="<%= htmlWebpackPlugin.options.commonChunks[key] %>" type="text/javascript"></script>
         <% } %>
+
+        <% for (key in htmlWebpackPlugin.files.chunks) { %>
+        <script src="<%= htmlWebpackPlugin.files.chunks[key].entry %>" type="text/javascript"></script>
+        <% } %>
     </head>
     <body>
 
@@ -33,13 +37,9 @@
 
         <ul id="slide-out" class="side-nav">
             <% for (key in htmlWebpackPlugin.options.menu) { %>
-            <li><a href="<%= htmlWebpackPlugin.options.menu[key] %>"><%= htmlWebpackPlugin.options.menu[key] %></a></li>
+            <li><a href="#!" data-href="<%= htmlWebpackPlugin.options.menu[key] %>"><%= htmlWebpackPlugin.options.menu[key] %></a></li>
             <% } %>
         </ul>
 
-
-        <% for (key in htmlWebpackPlugin.files.chunks) { %>
-        <script src="<%= htmlWebpackPlugin.files.chunks[key].entry %>" type="text/javascript"></script>
-        <% } %>
     </body>
 </html>
