--- a/samples/src/assets/sample.ejs
+++ b/samples/src/assets/sample.ejs
@@ -23,7 +23,7 @@
             <div class="nav-wrapper">
                 <div class="container">
                 <ul class="left" data-nav-account="">
-                    <li><a href="#" data-activates="slide-out" class="waves-effect waves-light"><i class="large material-icons">menu</i></a></li>
+                    <li><a href="#!" data-activates="slide-out" class="waves-effect waves-light"><i class="large material-icons">menu</i></a></li>
                 </ul>
                 <a href="#!" class="brand-logo" style="padding:0 20px;">AX6UI</a>
                 </div>
@@ -37,7 +37,7 @@
 
         <ul id="slide-out" class="side-nav">
             <% for (key in htmlWebpackPlugin.options.menu) { %>
-            <li><a href="#!" data-href="<%= htmlWebpackPlugin.options.menu[key] %>"><%= htmlWebpackPlugin.options.menu[key] %></a></li>
+            <li><a style="cursor:pointer;" data-href="<%= htmlWebpackPlugin.options.menu[key] %>"><%= htmlWebpackPlugin.options.menu[key] %></a></li>
             <% } %>
         </ul>
 
