--- a/samples/src/assets/sample.scss
+++ b/samples/src/assets/sample.scss
@@ -15,8 +15,6 @@ $small-and-down: "only screen and (max-width : #{$small-screen})";
 $medium-and-down: "only screen and (max-width : #{$medium-screen})";
 $medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width : #{$medium-screen})";
 
-$roboto-font-path: "fonts/roboto/";
-
 // Mixins
 @import "scss/components/mixins";
 @import "scss/components/color";
@@ -29,33 +27,36 @@ $roboto-font-path: "fonts/roboto/";
 
 // components
 @import "scss/components/global";
-@import "scss/components/badges";
-@import "scss/components/icons-material-design";
+//@import "scss/components/badges";
+//@import "scss/components/icons-material-design";
 @import "scss/components/grid";
 @import "scss/components/navbar";
-@import "scss/components/roboto";
+//@import "scss/components/roboto";
 @import "scss/components/typography";
-@import "scss/components/transitions";
+//@import "scss/components/transitions";
 @import "scss/components/cards";
-@import "scss/components/toast";
-@import "scss/components/tabs";
-@import "scss/components/tooltip";
+//@import "scss/components/toast";
+//@import "scss/components/tabs";
+//@import "scss/components/tooltip";
 @import "scss/components/buttons";
-@import "scss/components/dropdown";
+//@import "scss/components/dropdown";
 @import "scss/components/waves";
-@import "scss/components/modal";
-@import "scss/components/collapsible";
-@import "scss/components/chips";
-@import "scss/components/materialbox";
+//@import "scss/components/modal";
+//@import "scss/components/collapsible";
+//@import "scss/components/chips";
+//@import "scss/components/materialbox";
 @import "scss/components/forms/forms";
-@import "scss/components/table_of_contents";
-@import "scss/components/sideNav";
-@import "scss/components/preloader";
-@import "scss/components/slider";
-@import "scss/components/carousel";
-@import "scss/components/tapTarget";
-@import "scss/components/pulse";
+//@import "scss/components/table_of_contents";
+//@import "scss/components/sideNav";
+//@import "scss/components/preloader";
+//@import "scss/components/slider";
+//@import "scss/components/carousel";
+//@import "scss/components/tapTarget";
+//@import "scss/components/pulse";
 
+html, body {
+  height: 100%;
+}
 
 nav {
   background: #000;
